--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,12 +24,9 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Configure Git
+      - name: Deploy with gh-pages
         run: |
-          git config --global user.name "ashleendaly"
-          git config --global user.email "ashddev@proton.me"
-
-      - name: Deploy to GitHub Pages
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run deploy
